@@ -1,0 +1,35 @@
+[general]
+
+description = Missing reference_depth_to_1pt0km_per_sec
+calculation_mode = classical
+random_seed = 19
+
+[geometry]
+
+site_model_file = sites.csv
+
+[logic_tree]
+
+number_of_logic_tree_samples = 0
+
+[erf]
+
+rupture_mesh_spacing = 2
+width_of_mfd_bin = 0.1
+area_source_discretization = 10.0
+
+[site_params]
+
+reference_vs30_type = measured
+reference_vs30_value = 600.0
+reference_depth_to_2pt5km_per_sec = 5.0
+
+[calculation]
+
+source_model_logic_tree_file = source_model_logic_tree.xml
+gsim_logic_tree_file = gmpe_logic_tree.xml
+investigation_time = 50.0
+intensity_measure_types_and_levels = {
+  "PGA": [0.005, 0.007, 0.0098, 0.0137, 0.0192, 0.0269, 0.0376, 0.0527, 0.0738, 0.103, 0.145, 0.203, 0.284, 0.397, 0.556, 0.778, 1.09, 1.52, 2.13]}
+maximum_distance = 200
+truncation_level = 3
