@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Added check for missing site parameters
   * Optimized the generation of events
   * Fixed the GMFs CSV importer so that it can import exported GMFs even in
     the presence of a `custom_site_id`
